--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "daisyui": "^2.51.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "tailwindcss": "^3.3.1"
   }
 }
